--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
 			</svg>
 		</button>
 
+		<script src="data.js"></script>
 		<script src="scripts.js"></script>
 		<noscript>
 			<div style="padding: 40px; text-align: center; font-family: sans-serif">
